--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,12 @@ venv/
 .cache/
 .pytest_cache/
 pygsheets.egg-info/
-.pytest_cache/
-*.pyc
+
 
 # Other
 .idea/
 .DS_Store
 .python-version
 .coverage
+manage.py
+db.sqlite3
